<resources>
    <string name="app_name">PdmSubeCum</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="title_activity_menu_carnet">MenuCarnet</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="am15005">AM15005</string>
    <string name="nombre_sistema">SISTEMA DE INVENTARIO</string>
    <string name="grupo">Grupo 01</string>
    <string name="pm15007">PM15007</string>
    <string name="mm14031">MM14031</string>
    <string name="rl08017">RL08017</string>
    <string name="ts14004">TS14004</string>
    <string name="crud_am15005">AM15005</string>
    <string name="crud_pm15007">PM15007</string>
    <string name="crud_mm14031">MM14031</string>
    <string name="crud_rl08017">RL08017</string>
    <string name="crud_ts14004">TS14004</string>
    <string name="title_activity_materia_eliminar">MateriaEliminarActivity</string>
    <string name="opciones">Opciones a realizar</string>
    <string name="limpiarTexto">LIMPIAR</string>
    <string name="codigoMateria">Codigo Materia</string>
    <string name="nombreMateria">Nombre</string>
    <string name="UV">UV</string>
    <string name="idCiclo">ID Ciclo</string>
    <string name="idHorario">ID Horario</string>
    <string name="idDia">ID Dia</string>
    <string name="idAula">ID Aula</string>
    <string name="hora">Hora</string>
    <string name="idGrupo">ID Grupo</string>
    <string name="idDocente">ID Docente</string>
    <string name="descripcion">Descripcion</string>
    <string name="title_activity_docente_menu">DocenteMenuActivity</string>
    <string name="title_activity_asignacionEquipo_menu">AsignacionEquipoMenuActivity</string>
    <string name="title_activity_documentoAsignacion_menu">DocumentoAsignacionMenuActivity</string>
    <string name="title_activity_docente_insertar">DocenteInsertarActivity</string>
    <string name="title_activity_docente_eliminar">DocenteEliminarActivity</string>
    <string name="title_activity_docente_actualizar">DocenteActualizarActivity</string>
    <string name="title_activity_docente_consultar">DocenteConsultarActivity</string>
    <string name="title_activity_documentoAsignacion_insertar">DocumentoAsignacionInsertarActivity</string>
    <string name="title_activity_documentoAsignacion_eliminar">DocumentoAsignacionEliminarActivity</string>
    <string name="title_activity_documentoAsignacion_actualizar">DocumentoAsignacionActualizarActivity</string>
    <string name="title_activity_documentoAsignacion_consultar">DocumentoAsignacionConsultarActivity</string>
    <string name="title_activity_asignacionEquipo_insertar">AsignacionEquipoInsertarActivity</string>
    <string name="title_activity_asignacionEquipo_eliminar">AsignacionEquipoEliminarActivity</string>
    <string name="title_activity_asignacionEquipo_actualizar">AsignacionEquipoActualizarActivity</string>
    <string name="title_activity_asignacionEquipo_consultar">AsignacionEquipoConsultarActivity</string>
    <string name="docente_menu">Función a Ejecutar Docente</string>
    <string name="asignacionEquipo_menu">Función a Ejecutar AsignacionEquipo</string>
    <string name="documentoAsignacion_menu">Función a Ejecutar DocumentoAsignacion</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="codDocente">Codigo Docente</string>
    <string name="codUnidad">Unidad Administrativa</string>
    <string name="nombre_docente"> Nombre</string>
    <string name="apellido_docente"> Apellido</string>
    <string name="email_docente"> Email</string>
    <string name="insertar"> Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="codDocuAsignacion">ID DocumentoAsignacion</string>
    <string name="motivo_DocuAsignacion">Motivo</string>
    <string name="fecha_DocuAsignacion">Fecha de Asignacion</string>
    <string name="codAsignacionEquipo">Codigo de Asignacion de Equipo</string>
    <string name="fecha_AsignacionEquipo">Fecha de Asignacion</string>
    <string name="actualAsignado">Asignacion Actual</string>
    <string name="crud_unidad_administrativa">Unidad Administrativa</string>
    <string name="crud_equipo_existencia">Equipo Existencia</string>
    <string name="crud_equipo_movimiento">Equipo Movimiento</string>
    <string name="crud_equipo_movimiento_detalle">Equipo Movimiento Detalle</string>
    <string name="crud_tipo_movimiento_equipo">Tipo Movimiento</string>
    <string name="marca">marca</string>
    <string name="equipo"> equipo</string>
    <string name="tipo_equipo">tipo equipo</string>
    <string name="mas">mas</string>
    <string name="idmarca">id de marca</string>
    <string name="descripcionMarca">descripcion</string>
    <string name="insertar_PM15007">ingresar</string>
    <string name="Id_de_marca">ingrese el id de la marca a eliminar</string>
    <string name="eliminar_marca">eliminar</string>
    <string name="crud_create">Crear</string>
    <string name="crud_retrieve">Consultar</string>
    <string name="crud_update">Actualizar</string>
    <string name="crud_delete">Eliminar</string>
    <string name="crear_equipo_existencia">Crear Equipo Existencia</string>
    <string name="id_clase">ID (int)</string>
    <string name="existencia_actual">Existenca Actual (int)</string>
    <string name="limpiar_formulario">limpiar</string>
    <string name="consultar_equipo_existencia">Consultar Equipo Existencia</string>
    <string name="equipo_existencia">Equipo Existencia</string>
    <string name="consultar_marca">consultar</string>
    <string name="con_descripcion">Descripcion</string>
    <string name="delete_equipo_existencia">Eliminar Equipo Existencia</string>
    <string name="actualizar_equipo_existencia">Actualizar Equipo Existencia</string>
    <string name="actualizar_marca">actualizar</string>
    <string name="crear_unidad_administrativa">Crear Unidad Administrativa</string>
    <string name="unidad_administrativa">Unidad Administrativa</string>
    <string name="consultar_unidad_administrativa">Consultar Unidad Administrativa</string>
    <string name="update_unidad_administrativa">Actualizar Unidad Administrativa</string>
    <string name="delete_unidad_administrativa">Eliminar Unidad Administrativa</string>
    <string name="idTipos_Equipo">Tipos equipo</string>
    <string name="id_del_Equipo">id del equipo</string>
    <string name="serie_equipo">serie del equipo</string>
    <string name="Caracteristicas_equipo">caracteristicas equipo</string>
    <string name="Modelo">modelo del equipo</string>
    <string name="Fecha_ingreso">fecha de ingreso</string>
    <string name="equipodisponible">Equipo disponible</string>
    <string name="ingreseFecha">ingrese la fecha</string>
    <string name="crear_tipo_movimiento_equipo">Crear Tipo Movimiento Equipo</string>
    <string name="tipo_movimiento_equipo">Tipo Movimiento Equipo</string>
    <string name="consultar_tipo_movimiento_equipo">Consultar Tipo Movimiento Equipo</string>
    <string name="actualizar_tipo_movimiento_equipo">Actualizar Tipo Movimiento Equipo</string>
    <string name="eliminar_tipo_movimiento_equipo">Eliminar Tipo Movimiento Equipo</string>
    <string name="idTipo">id tipo</string>
    <string name="descTipoM">descripcion</string>
    <string name="opcionesTM">opciones</string>
    <string name="idDocExi">id Doc Existencia</string>
    <string name="isbnDoc">Documento ISBN</string>
    <string name="descIdDocente">ID Docente</string>
    <string name="descUnidasAdm">Unidad Administrativa</string>
    <string name="descActual"> Actual </string>
    <string name="idDocMov"> id movimiento documento </string>
    <string name="idUnOrigen"> Unidad Origen </string>
    <string name="idUniDestino"> Unidad Destino </string>
    <string name="fecha"> fecha </string>
    <string name="idMovDetalle"> id Movimiento detalle </string>
    <string name="ingreseidequipo">ingrese el id del equipo</string>
    <string name="eliminar_equipo">Eliminar Equipo</string>
    <string name="documento">Documento</string>
    <string name="idTipos_De_Doc">Tipo de documento</string>
    <string name="nombredoc">Nombre del documento</string>
    <string name="Idioma">Idioma del documento</string>
    <string name="isbnDelDoc">ISBN</string>
    <string name="documentodisponible">Documento disponible</string>
    <string name="nombre_app">Sistema de inventario</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="mensaje_eliminar">Tablas Afectadas: </string>
    <string name="titulo_dialogo">¿Esta seguro de eliminar?</string>
    <string name="tablas_ts14004">Docente/AsignacionEquipo/DocumentoAsignaciongnment</string>
    <string name="tablas_rl08017">TipoMovDoc/DocumentoMov/DocumentoMovDetalle</string>
    <string name="tablas_pm15007">UnidadAdministrativa / EquipoExistencia / TipoMovimientoEquipo</string>
    <string name="tablas_mm14031">Tablas: Materia, Horario y Grupo</string>
    <string name="tablas_am15005">Documento/Equipo/Marca/</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="txt_descripcion_tipo_mov_equipo">Descripcion (string)</string>
    <string name="txt_id_equipo_equipo_existencia">ID Equipo (int)</string>
    <string name="txt_id_docente_equipo_existencia">ID Docente (int)</string>
    <string name="txt_id_unidad_admin_equipo_existencia">ID Unidad Administrativa (int)</string>
    <string name="txt_nombre_unidad_administrativa">nombre (string)</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">aceptar</string>
    <string name="tablas">Equipo</string>
    <string name="rellenarid">por favor rellene el id o ingrese un id valido </string>
    <string name="verificar">lo sentimos el id no exite</string>
    <string name="verificarISBN">lo sentimos no existe el isbn</string>
    <string name="asignacionEquipoDetalle">asignacionEquipoDetalle</string>
    <string name="EquipoMovimientoDetalle">EquipoMovimientoDetalle</string>
    <string name="autorDetalle">autorDetalle</string>
    <string name="DocumentoAsignacionDetalle">DocumentoAsignacionDetalle</string>
    <string name="DocumentoMovimientoDetalle">DocumentoMovimientoDetalle</string>
    <string name="mensaje_actualizar">los siguientes registros se actualizaran en la tabla :</string>
    <string name="titulo_dialogo_update">¿Esta seguro de actualizar?</string>
    <string name="marcaconid">Marca con id</string>
    <string name="nulo">por favor llene todos los campos o el id ingresado ya existe</string>
    <string name="verificarintegridad">ya existe un registro con el id</string>
    <string name="actualizado">cantidad de registros actualizados </string>
    <string name="noactualizado">no se actualizo el registro</string>
    <string name="please_fill">Por Favor rellene todos los campos</string>
    <string name="ws_equipo">Servicios Web Equipo</string>
    <string name="ws_existencia">Servicios Web Existencia</string>
    <string name="ws_equipoAsignacion">Servicios Web Equipo Asignado</string>
    <string name="ws_documentoAsignacion">Servicios Web Documento Asignado</string>
</resources>