<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/idHorario"/>
        <EditText
            android:id="@+id/editIdHorario"
            android:inputType="number"
            android:maxLength="6"/>

    </TableRow>

    <TableRow>
        <TextView android:text="@string/hora"/>
        <EditText
            android:id="@+id/editHora"
            android:inputType="text"
            android:maxLength="40"/>

    </TableRow>

    <TableRow>
        <TextView android:text="@string/idAula"/>
        <EditText
            android:id="@+id/editIdAula"
            android:inputType="number"
            android:maxLength="6"/>

    </TableRow>

    <TableRow>
        <TextView android:text="@string/idDia"/>
        <EditText
            android:id="@+id/editIdDia"
            android:inputType="number"
            android:maxLength="2"/>

    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones"/>
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarHorario"
            android:text="@string/insertar"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiarTexto"/>
    </TableRow>

</TableLayout>