<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idDocExi" />
        <EditText
            android:id="@+id/editID"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/isbnDoc" />
        <EditText
            android:id="@+id/editIsbn"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descIdDocente" />
        <EditText
            android:id="@+id/editIdDocente"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descUnidasAdm" />
        <EditText
            android:id="@+id/editUnidadAdm"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descActual" />
        <EditText
            android:id="@+id/editActual"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizar"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>