<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/idGrupo" />

        <EditText
            android:id="@+id/editIdGrupo"
            android:inputType="number"
            android:maxLength="6"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/descripcion" />

        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="30"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/codigoMateria" />

        <EditText
            android:id="@+id/editCodigoMateria"
            android:inputType="text"
            android:maxLength="6"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/idDocente" />

        <EditText
            android:id="@+id/editIdDocente"
            android:inputType="number"
            android:maxLength="6"/>
    </TableRow>

    <TableRow>
        <TextView android:text="@string/idHorario" />

        <EditText
            android:id="@+id/editIdHorario"
            android:inputType="number"
            android:maxLength="6"/>
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarGrupo"
            android:text="@string/actualizar"/>
    </TableRow>

    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiarTexto"/>
    </TableRow>

</TableLayout>