<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    tools:context=".am15005.Activities.Marca.InsertarMarcaActivity"
    >

    <TableRow>
        <TextView android:text="@string/idmarca"/>
        <EditText
            android:id="@+id/id_de_marca"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcionMarca" />
        <EditText
            android:id="@+id/editDescripcion_marca"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarMarca"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>



</TableLayout>