<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WebServices.WS"
    android:weightSum="1">

    <Button
        android:id="@+id/button_equipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/ws_equipo"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/button_existencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/ws_existencia"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_equipoAsignacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/ws_equipoAsignacion"
        android:layout_weight="0.06" />
    <Button
        android:id="@+id/button_documentoAsignacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/ws_documentoAsignacion"
        android:layout_weight="0.06" />

</LinearLayout>