<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codAsignacionEquipo" />

    <EditText
        android:id="@+id/edt_CodAsignaEquipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="id"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F84234"
        android:onClick="eliminarAsignacionEquipo"
        android:text="@string/eliminar" />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E2EE7D"
        android:onClick="limpiarTexto"
        android:text="@string/limpiarTexto" />
</LinearLayout>
